<resources>
    <string name="app_name">Rythmap</string>
    <string name="email">Email</string>
    <string name="username_or_email">Username or email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="recover_password">Recover password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="o"><![CDATA[\\(>o<)/]]></string>
    <string name="map">Map</string>
    <string name="account">Account</string>
    <string name="friends">Friends</string>
    <string name="amount_of_friends">friends</string>
    <string name="add_more_info">Add more info</string>
    <string name="about_you">about you</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="tell_about_yourself">Tell about yourself</string>
    <string name="music_prefs">Music prefs</string>
    <string name="other_prefs">Other prefs</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="in_order_for_application_to_work">In order for application to work</string>
    <string name="please_link_at_least_one_music_service">Please link at least one music service</string>
    <string name="yandex_music_linked">Yandex Music linked successfully!</string>
    <string name="yandex_music_link_cancelled">Yandex Music link cancelled</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="add">Add</string>
    <string name="message">Message</string>
    <string name="edit">Edit</string>
    <string name="tap_for_more_info">Tap for more info</string>
    <string name="edit_profile">Edit profile</string>
    <string name="failed_to_retrieve_account_info">Failed to retrieve account info</string>
    <string name="failed_to_retrieve_media">Failed to retrieve media</string>
    <string name="failed_to_upload_media">Failed to upload media</string>
    <string name="failed_to_decode_media">Failed to decode media</string>
    <string name="failed_to_pick_media">Failed to pick media</string>
    <string name="save_changes">Save changes</string>
    <string name="messenger">Messenger</string>
    <string name="search">Search</string>
    <string name="cancel_friend_request">Cancel friend request</string>
    <string name="remove_friend">Remove friend</string>
    <string name="cancel_friend_request_message">Are you sure you want to cancel friend request?</string>
    <string name="remove_friend_message">Are you sure you want to remove friend?</string>
    <string name="friend_request_sent">Friend request sent</string>
    <string name="friend_request_cancelled">Friend request cancelled</string>
    <string name="friend_request_accepted">Friend request accepted</string>
    <string name="friend_request_declined">Friend request declined</string>
    <string name="friend_removed">Friend removed</string>
    <string name="failed_to_send_friend_request">Failed to send friend request</string>
    <string name="failed_to_cancel_friend_request">Failed to cancel friend request</string>
    <string name="failed_to_accept_friend_request">Failed to accept friend request</string>
    <string name="failed_to_decline_friend_request">Failed to decline friend request</string>
    <string name="failed_to_remove_friend">Failed to remove friend</string>
    <string name="friend_requests">Friend requests</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="listen">Listen</string>s
    <string name="last_track">Last track</string>
    <string name="no_track_listened">No track listened</string>
    <string name="maybe_listen_to_some_music">Maybe listen to some music?</string>
    <string name="you_re_friends">In friends</string>
    <string name="pending">Pending</string>
    <string name="actions">Actions</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="profile">Profile</string>
    <string name="listens_to">listens to</string>
    <string name="failed_to_get_account_info">Failed to get account info</string>
    <string name="password_reqs">Password requirements</string>
    <string name="password_reqs_message"><![CDATA[Minimum eight characters, at least one uppercase letter, one lowercase letter, one number and one special character: !%*?&]]></string>

    <string-array name="music_preferences">
        <item>Rap</item>
        <item>Pop</item>
        <item>Rock</item>
        <item>Hip-Hop</item>
        <item>Country</item>
        <item>Electronic</item>
        <item>Jazz</item>
        <item>Classical</item>
        <item>Metal</item>
        <item>Punk</item>
        <item>Phonk</item>
    </string-array>

    <string-array name="other_preferences">
        <item>Books</item>
        <item>Movies</item>
        <item>TV Shows</item>
        <item>Podcasts</item>
        <item>Games</item>
        <item>Food</item>
        <item>Travel</item>
        <item>Art</item>
        <item>Science</item>
        <item>Technology</item>
        <item>Health</item>
        <item>Music</item>
    </string-array>
</resources>