<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:indeterminate="true"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lastTrackContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nicknameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/inter_bold"
            android:text="nickname"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/trackImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:padding="3dp"
            android:src="@drawable/music_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nicknameTextView"
            app:shapeAppearanceOverlay="@style/roundedImageView25"
            app:strokeColor="?attr/colorPrimary"
            app:strokeWidth="6dp" />

        <TextView
            android:id="@+id/trackNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/inter_semibold"
            android:text="Track name"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/trackImageView"
            app:layout_constraintTop_toBottomOf="@+id/nicknameTextView" />

        <TextView
            android:id="@+id/artistNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/inter_regular"
            android:text="Artist name"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/trackImageView"
            app:layout_constraintTop_toBottomOf="@+id/trackNameTextView" />

        <Button
            android:id="@+id/listenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="?attr/colorSecondaryContainer"
            android:fontFamily="@font/inter_medium"
            android:text="@string/listen"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/trackDurationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/inter_regular"
            android:text="1:20"
            app:layout_constraintStart_toEndOf="@+id/trackImageView"
            app:layout_constraintTop_toBottomOf="@+id/artistNameTextView" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="?attr/colorPrimary"
            android:textColor="?attr/colorPrimaryContainer"
            android:fontFamily="@font/inter_medium"
            android:text="@string/profile"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toTopOf="@+id/trackNameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/listensToLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/listens_to"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/nicknameTextView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>